--- a/MOOSE_web/templates/new.html
+++ b/MOOSE_web/templates/new.html
@@ -101,7 +101,7 @@
                         <select id="repo_platform" class="select2">
                             <option>Select a Platform</option>
                             <option value="1">Github</option>
-                            <option value="2">SourceForge</option>
+                            <option value="2">Gitee</option>
                         </select>
                     </div>
 
