--- a/MOOSE_web/templates/login/login.html
+++ b/MOOSE_web/templates/login/login.html
@@ -37,11 +37,11 @@
 
                 <div class="login__block__body">
                     <div class="form-group">
-                        <input type="text" class="form-control text-center" name="loginUsername" id="login-username" placeholder="Email Address">
+                        <input type="text" value="1" class="form-control text-center" name="loginUsername" id="login-username" placeholder="Email Address">
                     </div>
 
                     <div class="form-group">
-                        <input type="password" class="form-control text-center" name="loginPassword" id="login-password" placeholder="Password">
+                        <input type="password" value="1" class="form-control text-center" name="loginPassword" id="login-password" placeholder="Password">
                     </div>
                     <button type="submit" class="btn btn--icon login__block__btn"><i class="zmdi zmdi-long-arrow-right"></i></button>
                 </div>
